force-app/main/default/objects/BT_Campaign_Cascade_Mapping__mdt.object
<CustomObject>
    <description>Metadata to store mapping of fields between Parent, Event Group and Sibling Campaigns</description>
    <fields>
        <fullName>Event_Field__c</fullName>
        <description>Field API Name of Blackthorn Event</description>
        <inlineHelpText>Field API Name of Blackthorn Event</inlineHelpText>
        <label>Event Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Group_Field__c</fullName>
        <description>Field API Name of Blackthorn Event Group</description>
        <inlineHelpText>Field API Name of Blackthorn Event Group</inlineHelpText>
        <label>Event Group Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_campaign_Field__c</fullName>
        <description>Field API Name of Parent Campaign</description>
        <inlineHelpText>Field API Name of Parent Campaign</inlineHelpText>
        <label>Parent campaign Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>BT Campaign Cascade Mapping</label>
    <pluralLabel>BT Campaign Cascade Mappings</pluralLabel>
</CustomObject>